delpoyment/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lms-api
  namespace: lms
  labels:
    app: lms-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lms-api
  template:
    metadata:
      labels:
        app: lms-api
    spec:
      containers:
        - name: lms-api
          image: sugamdocker35/lms-api:v1.0.2
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: lms-api
  namespace: lms
spec:
  type: NodePort
  selector:
    app: lms-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30080
