delpoyment/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lms
  namespace: lms
spec:
  ingressClassName: nginx
  rules:
  - host: lms.somtu.edu.np
    http:
      paths:
      - backend:
          service:
            name: connect-nextjs-website
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
